# limen

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  time_decay_reputation_design.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_discussion.md
examples/: basic_reputation_flow.rs
src/: lib.rs
src/reputation_system/: circuits.rs  mod.rs  prover.rs  types.rs  utils.rs  verifier.rs
